# Automated-Multi-Agentic-Trading-System

./: .gitignore  AGENTS.md  FYP Slides.pptx  README.md  claude_prompt.html  implementation.md  index.html  main.py  package-lock.json  pptx_prompt.html  pyproject.toml  requirements.txt  schemas.py  skills-lock.json  tools.py
.antigravitycli/: 6a274083-cff5-4cdc-ac13-d255cfc61579.json
static/: app.js  style.css
