[project]
name = "automated-multi-agentic-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=4.7.1",
    "openai-agents[sqlalchemy]>=0.17.4",
    "openinference-instrumentation-openai-agents>=1.5.1",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "yfinance>=1.4.1",
]
