[project]
name = "automated-multi-agentic-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langfuse>=4.7.1",
    "openai-agents[sqlalchemy]>=0.17.4",
    "openinference-instrumentation-openai-agents>=1.5.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.4",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.1",
]
